# fair-eva-plugin-oai-pmh

./: .gitignore  README.md  pyproject.toml  test-requirements.txt
fair_eva/plugin/oai-pmh/: config.ini  plugin.py
fair_eva/plugin/oai_pmh/: config.ini  plugin.py
